# dtcalc

./: README.md  pyproject.toml
.github/workflows/: main.yml
dtcalc/: __init__.py
tests/: test_dtcalc.py
