[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtcalc"
description = "Parse and perform datetime arithmetic."
requires-python = ">=3.10"
dynamic = ["readme"]
version = "2023.11"
license = { text = "MIT" }

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
select = ["ALL"]
ignore = [
    "TRY003",
    "EM101",
    "EM102",
    "ANN101",
    "ANN102",
    "ANN202",
    "ANN204",
    "PD002",
    "B905",
    "FBT001",
    "FBT002",
    "D401",
    "T201",
    "TD",
    "FIX002",
    "ERA001",
    "G004",
]
extend-exclude = ["code"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT", "PLR2004", "S311", "ANN201", "INP001", "D103"]

[tool.black]
extend-exclude = '^/(code|venv)'
